--- a/_posts/diary/2022-01-01-restrospect2021.md
+++ b/_posts/diary/2022-01-01-restrospect2021.md
@@ -22,7 +22,7 @@ tags: [회고]
 `React`는 고사하고 `javascript`에 대한 개념과 기초가 부족했기 때문에 [코뿔소 책](http://www.yes24.com/Product/Goods/42806896)을 사서 나름대로 공부를 했다.
 또한 상태 관리 라이브러리인 `redux`에 대해 어느정도 이해가 되고나니 내가 맡은 부분에 있어서는 큰 어려움 없이 구현을 할 수 있었다.
 
-점점 익숙해지다보니 깊게 공부하기보다는 그냥 아는 지식으로 구현하는 것에 만족하면서 지냈던 것 같다(~~편하니까~~). 지금 돌이켜 생각해보면 `시간 내에 구현하는 것 = 실력`이라고 착각했던 것 같다.
+점점 익숙해지다보니 깊게 공부하기보다는 그냥 아는 지식으로 구현하는 것에 만족하면서 지냈던 것 같다. 지금 돌이켜 생각해보면 `시간 내에 구현하는 것 = 실력`이라고 착각했던 것 같다.
 물론 정해진 기간 내에 맡은 일을 마무리하는 것은 매우 중요하지만, 그것은 개발자의 기본 소양인 것 같다. 진짜 실력은 생산성과 더불어 ***얼마나 좋은 코드를 작성하는지***에 달린 것 같다.
 내가 생각하는 '좋은 코드'의 특징은 크게 `유지보수하기 좋다`, `트레이드 오프가 적절하게 고려되었다` 인 것 같다.
 
@@ -61,7 +61,7 @@ tags: [회고]
 또한 실력이 없으면 부당한 상황에서도 본인의 선택권 없이 회사가 하라는대로 할 수 밖에 없는 많은 상황들을 지켜보며 실력을 키워야겠다는 생각이 더욱 절실하게 들었다.
 그리고 항상 마음 한켠에는 일반 사용자를 대상으로 하는 서비스(나도 사용하는) 회사에 가서 프로덕트에 좀 더 애정을 갖고 일하고 싶다는 생각이 있었다. 따라서, `네카라쿠배`가 아니더라도 반드시 IT 서비스 회사를 가야겠다고 생각했다.
 
-올 해 초 결혼을 하고나서부터 이력서를 작성하고 코딩테스트를 준비하는 등 본격적으로 이직 준비를 시작했다. 그리고 3월에 네이버 계열사 중 한 곳의 면접을 볼 수 있게 되었다.
+작년 초 결혼을 하고나서부터 이력서를 작성하고 코딩테스트를 준비하는 등 본격적으로 이직 준비를 시작했다. 그리고 3월에 네이버 계열사 중 한 곳의 면접을 볼 수 있게 되었다.
 단순히 불합격을 넘어 결과는 참담했고 그 면접을 통해 현재 내가 어떤 수준이고 얼마나 부족한지를 자각할 수 있었다. 가장 문제라고 생각된 부분은 면접시 내가 한 부분에 대해 자신있게 얘기할게 없었다는 것이었다.
 ***기술에 대한 깊은 이해, 좀 더 좋은 코드, 다양한 문제 해결 방법을 생각하며 일하지 않고 단순히 구현하기에 바빴던 나에게 어떻게 보면 당연한 결과였던 것 같다.***
 
