카테고리 재구성중

--- a/_posts/working-level-experience/issue/2022-02-18-apache-2.2-to-2.4-issue.md
+++ b/_posts/working-level-experience/issue/2022-02-18-apache-2.2-to-2.4-issue.md
@@ -1,7 +1,7 @@
 ---
 title: Apache Http Server 2.2.x -> 2.4.x 버전 업그레이드 하면서 겪었던 이슈
 date: 2022-02-18 00:25:00 +0900
-categories: [개발 일기]
+categories: [경험하기, 이슈 노트]
 tags: [Apache]
 ---
 
