카테고리 정리

--- a/_posts/diary/2022-01-01-restrospect2021.md
+++ b/_posts/diary/2022-01-01-restrospect2021.md
@@ -1,13 +1,13 @@
 ---
 title: SI에서 IT 서비스 기업으로 가기까지 (feat.회고록)
 date: 2022-01-01 01:00:00 +0900
-categories: [끄적끄적]
-tags: [회고]
+categories: [되돌아보기]
+tags: []
 ---
 
 # 지난 3년 되돌아보기
 ---
-2022년이다. 21년엔 목표하던 IT 서비스 회사로 이직을 하게되었다.(~~네카라쿠배당토야 아님 주의~~) 이직에 성공하면 회고록을 적어보고 싶다는 로망(?)이 있었는데, 미루다가 새해를 맞이하면서 써보려고한다.
+2022년이다. 21년엔 목표하던 IT 서비스 회사로 이직을 하게되었다. 이직에 성공하면 회고록을 적어보고 싶다는 로망(?)이 있었는데, 미루다가 새해를 맞이하면서 써보려고한다.
 스스로를 되돌아보면서 생각을 정리하고, 새로운 한 해 또한 즐겁고 열심히 살 수 있길 바라본다.
 
 ## 개발자로서 사회의 첫발을 내딛다.
