--- a/_posts/diary/2022-01-01-restrospect2021.md
+++ b/_posts/diary/2022-01-01-restrospect2021.md
@@ -1,7 +1,7 @@
 ---
 title: SI에서 IT 서비스 기업으로 가기까지 (feat.회고록)
 date: 2022-01-01 01:00:00 +0900
-categories: [되돌아보기]
+categories: [끄적끄적]
 tags: []
 ---
 
