--- a/_posts/diary/2025-10-15-daily-note-251015.md
+++ b/_posts/diary/2025-10-15-daily-note-251015.md
@@ -5,9 +5,9 @@ categories: [끄적끄적]
 tags: []
 ---
 
-현실적으로 생계 유지를 하려면 내 인생에서 일은 계속 해야하지 않을까 생각한다.
+현실적으로 생계를 유지하려면 내 인생에서 일은 계속 해야하지 않을까 생각한다.
 
-하루 24시간 중 일과 관련된 시간을 생각해보면:
+하루 24시간 중 일과 관련된 시간은:
 - 출퇴근 (출근 준비시간 포함) : 2시간
 - 회사에 있는 시간 : (8시간 근무 기준) 9시간
 
@@ -17,9 +17,9 @@ tags: []
 - 하루로 계산했을때, 약 `45%`
 - 1년 워킹데이(대략 250일)로 계산했을때, 약 `31%`
 
-몇 살까지 일을 할 수 있을지는 모르겠지만, 인생 전체를 놓고 보더라도 일은 삶에서 굉장히 많은 시간을 차지해왔고 앞으로도 그럴것 같다. 인생의 많은 부분을 차지하는 만큼, 이왕이면 **그 시간들이 (회사에게도 나에게도 모두) 가치있게 사용되면 좋겠다**는 생각이든다.
+몇 살까지 일을 할 수 있을지는 모르겠지만, 인생 전체를 놓고 보더라도 **일은 내 삶에서 굉장히 많은 시간을 차지해왔고 앞으로도 그럴것 같다.** 인생의 많은 부분을 차지하는 만큼, 이왕이면 그 시간들이 **회사와 나 모두에게 가치있는 시간이면 좋겠다.**
 
-> 먼저, 회사 입장에서 (개발자로서의) 내 시간이 가치있으려면 ? (= 나한테 월급 주는게 안 아까우려면)
+> 먼저, 회사 입장에서 내 시간이 가치있으려면 ? (= 나한테 주는 월급이 안 아까우려면)
 
 ```
 - 최소한의 리소스(시간, 서버 비용, 기술 선택 등)로 일을 처리한다.
@@ -45,9 +45,9 @@ tags: []
 - 기타 등등..
 ```
 
-즉, 일하는 시간이 회사와 나에게 모두 가치있다는건:<br>
-- ***평소에 많이 고민하고 꾸준히 공부한 역량을 바탕으로,***<br>
-- ***일을 잘해야하며,***<br>
+즉, 일하는 시간이 회사와 나에게 모두 가치있다는건: <br>
+- ***평소에 많이 고민하고 꾸준히 공부한 역량을 바탕으로,*** <br>
+- ***일을 잘해야하며,*** <br>
 - ***그 과정을 통해 성장하는 것***
 
 이라고 생각한다.
