오늘 드는 생각

--- a/_posts/diary/2025-10-15-daily-note-251015.md
+++ b/_posts/diary/2025-10-15-daily-note-251015.md
@@ -69,3 +69,6 @@ tags: []
 5. 현재 회사에 의존적이게 되는 것을 경계하기 위해, 이직을 위한 공부
   (사실 앞서 적은 것들이 결국 이직할 때 가장 중요한 부분인 것 같긴하다.)
 ```
+
+꾸준히 공부는 해오고있지만, 명확한 방향성 없이 갈팡질팡하는 느낌을 받은 적들이 꽤 있던것 같은데<br>
+앞으로는 나름대로 정리한 우선순위와 분명한 목적을 갖고 공부해보면 좋을 것 같다.
