--- a/_posts/diary/2025-10-15-daily-note-251015.md
+++ b/_posts/diary/2025-10-15-daily-note-251015.md
@@ -48,6 +48,7 @@ tags: []
 즉, 일하는 시간이 회사와 나에게 모두 가치있다는건: <br>
 - ***평소에 많이 고민하고 꾸준히 공부한 역량을 바탕으로,*** <br>
 - ***일을 잘해야하며,*** <br>
+- ***조금 어렵고 힘들더라도 견디며,*** <br>
 - ***그 과정을 통해 성장하는 것***
 
 이라고 생각한다.
@@ -58,7 +59,7 @@ tags: []
 1. 업무를 진행할때 걸림돌이 되는 부분을 없애기 위한 공부
   (도메인, 사용하는 기술 등)
 
-2. 동일한 업무를 다른 방식으로도 처리할 수 있을지에 대한 공부
+2. 동일한 업무를 다른 방식으로도 처리할 수 있을지(특히, 좀 더 어려운 상황인 경우를 가정해서)에 대한 공부
   (기술 블로그, 발표 등 참고할 것들이 많다.)
 
 3. 현재 방식의 비효율적인 부분, 이슈가 될만한 부분을 찾고 개선하는데 필요한 공부
