--- a/_posts/diary/2025-10-15-daily-note-251015.md
+++ b/_posts/diary/2025-10-15-daily-note-251015.md
@@ -65,7 +65,7 @@ tags: []
 3. 현재 방식의 비효율적인 부분, 이슈가 될만한 부분을 찾고 개선하는데 필요한 공부
   (먼저, 문제를 인식할 수 있는 감각을 키우는게 중요한 것 같다. => 셰프들이 미각을 훈련하는 것처럼)
 
-4. (별다른 고민없이) 관성적으로 하고있는 것들을 돌아보는 공부
+4. (별다른 고민없이) 관성적으로 사용하고있는 것들을 깊이 이해하기 위한 공부
 
 5. 현재 회사에 의존적이게 되는 것을 경계하기 위해, 이직을 위한 공부
   (사실 앞서 적은 것들이 결국 이직할 때 가장 중요한 부분인 것 같긴하다.)
