--- a/_posts/diary/2025-11-09-daily-note-251109.md
+++ b/_posts/diary/2025-11-09-daily-note-251109.md
@@ -11,11 +11,11 @@ tags: []
 
 그래서 요즘은 코드를 작성할 때:
   - 무의식적으로 깔고 있는 전제조건이 무엇인지
-  - 그 전제조건을 없앨 수는 없는지
+  - 그 전제조건을 없앨 수 있는지
   - 만약 어긋났을 때는 어떻게 처리할 것인지
   - 그리고 숨겨진 전제조건이 있다면 이를 코드 상에서 드러낼 수 있는지
   - 보이지 않는 연결고리를 끊을 수 있는지
 
 에 대해 고민하게 되는 것 같다.
 
-나아가, 나 자신도 어떤 일을 하려면 특정한 환경이나 조건이 갖춰져야만 하는 사람이 아니라, **최소한의 전제조건으로도 제 역할을 다할 수 있는 사람**이 되고 싶다.
+나아가, 나 자신도 어떤 일을 하려면 특정한 환경이나 조건이 갖춰져야만 하는게 아닌, **최소한의 전제조건으로도 제 역할을 다할 수 있는 사람**이 되고 싶다.
