aws 상품별 공식문서 링크 추가

--- a/_posts/knowledge /theory/aws/2025-11-11-aws-intro.md
+++ b/_posts/knowledge /theory/aws/2025-11-11-aws-intro.md
@@ -13,11 +13,15 @@ tags: [AWS]
 ---
 
 ### VPC (Virtual Private Cloud)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/vpc/latest/userguide/what-is-amazon-vpc.html)
+
 - AWS 상에서 **논리적으로 분리된 네트워크 공간**을 만드는 서비스.
 - 서브넷, 라우팅 테이블, 게이트웨이 등을 설정해서 트래픽 흐름과 보안을 제어함
 - 쉽게 말해, 내가 설계한 **가상 데이터센터**
 
 ### Zone (Availability Zone)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/AWSEC2/latest/UserGuide/using-regions-availability-zones.html)
+
 - AWS 리전(예: ap-northeast-2 = 서울)에 있는 **물리적으로 분리된 데이터센터** 단위.
 - 여러 AZ에 서버를 분산 배치하면 장애 시에도 서비스 지속 가능 → 고가용성 확보.
 
@@ -27,12 +31,18 @@ tags: [AWS]
 ---
 
 ### ECR (Elastic Container Registry)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/AmazonECR/latest/userguide/what-is-ecr.html)
+
 - **Docker 이미지를 저장**하고 ECS/EKS에서 pull 해서 실행할 수 있도록 하는 서비스.
 
 ### ECS (Elastic Container Service)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/AmazonECS/latest/developerguide/Welcome.html)
+
 - AWS 네이티브 컨테이너 오케스트레이션 — Docker 컨테이너를 자동 배포 및 확장.
 
 ### EKS (Elastic Kubernetes Service)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/eks/latest/userguide/what-is-eks.html)
+
 - 쿠버네티스를 AWS에서 완전관리형으로 제공 — 노드 관리, 업그레이드, 보안 자동 처리.
 
 <br>
@@ -40,18 +50,20 @@ tags: [AWS]
 ## 3. 서비스 연결 및 트래픽 제어
 ---
 
-### Consul (AWS 상품은 아님)
-- 서비스 디스커버리 및 헬스체크 기능 제공.
-- 마이크로서비스 간의 동적 연결 관리.
-
 ### AWS Cloud Map
-- Consul과 유사한 AWS 네이티브 서비스로, 서비스 이름 기반으로 자동 DNS 등록/검색.
+> [공식문서](https://docs.aws.amazon.com/ko_kr/cloud-map/latest/dg/what-is-cloud-map.html)
+
+- [Consul](https://developer.hashicorp.com/consul)과 유사한 AWS 네이티브 서비스로, 서비스 이름 기반으로 자동 DNS 등록/검색.
 
 ### Route 53
+> [공식문서](https://docs.aws.amazon.com/ko_kr/Route53/latest/DeveloperGuide/Welcome.html)
+
 - AWS의 **DNS 서비스**
 - 도메인 이름을 IP로 변환하고 트래픽을 라우팅.
 
 ### ALB (Application Load Balancer)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/elasticloadbalancing/latest/application/introduction.html)
+
 - HTTP/HTTPS(7계층) 부하 분산.
 - **경로 기반/호스트 기반 라우팅** 가능.
 
@@ -61,10 +73,14 @@ tags: [AWS]
 ---
 
 ### WAF (Web Application Firewall)
+> [공식문서](https://docs.aws.amazon.com/ko_kr/waf/latest/developerguide/waf-chapter.html)
+
 - XSS, SQL Injection 등 웹 공격 차단.
 - ALB/CloudFront와 함께 사용.
 
-### Secret Manager
+### Secrets Manager
+> [공식문서](https://docs.aws.amazon.com/ko_kr/secretsmanager/latest/userguide/intro.html)
+
 - DB 비밀번호, API 키 등 **민감한 정보를 안전하게 저장**하고 관리.
 
 <br>
@@ -73,11 +89,13 @@ tags: [AWS]
 ---
 
 ### CloudWatch
+> [공식문서](https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/WhatIsCloudWatch.html)
+
 - AWS 리소스의 상태 모니터링, 로그 수집, 알람 설정, 자동 대응 기능을 제공.
 
 ### ELK (ElasticSearch, Logstash, Kibana)
 - 로그 수집 → 저장 → 시각화.
-- AWS에서는 OpenSearch 형태로 제공.
+- AWS에서는 [OpenSearch](https://docs.aws.amazon.com/ko_kr/opensearch-service/latest/developerguide/what-is.html) 형태로 제공.
 
 <br>
 
