--- a/_posts/knowledge /theory/aws/2025-12-29-aws-efs.md
+++ b/_posts/knowledge /theory/aws/2025-12-29-aws-efs.md
@@ -45,7 +45,49 @@ tags: [AWS]
 - Amazon EFS에 대한 NFS 클라이언트 접근은 IAM 정책과 보안 그룹 같은 네트워크 보안 설정을 함께 사용하여 제어된다.
   - 즉, **네트워크 차원**에서 접근이 허용되어야 하며, 동시에 해당 리소스에 **EFS 접근 권한**이 부여되어 있어야 실제 사용이 가능하다.
 
+## 주요 기능
+---
+
+### 인증과 접근 제어
+- Amazon EFS 관리 콘솔을 사용하거나 파일 시스템 생성과 같은 EFS API를 호출하려면 유효한 인증 정보가 필요하다.
+- 또한 EFS 파일 시스템뿐 아니라, 이를 사용하는 다른 AWS 리소스에 대해서도 적절한 접근 권한이 함께 부여되어야 한다.
+- EFS 리소스를 생성하거나 접근할 수 있도록 **명시적인 권한**을 부여받아야 한다.
+  - IAM User / IAM Role 기반 권한 모델
+- NFS 클라이언트에 대한 IAM 인증은 대규모 환경에서 NFS 접근 관리를 단순화하기 위해 IAM을 활용하는 추가적인 보안 옵션이다.
+  - IAM 기반 NFS 인증을 사용하면 IAM을 통해 EFS 파일 시스템 접근을 확장성 있게 관리할 수 있다.
+  - 즉, 인스턴스 수가 늘어나도 IP 규칙을 일일이 관리할 필요가 없다.
+
+
+## 액세스 포인트
+---
+> 하나의 EFS 파일 시스템 안에서 **애플리케이션별로 접근 경로를 분리**해 주는 진입 지점
+
+- 액세스 포인트를 통해 이루어지는 모든 파일 시스템 요청에 대해 **특정 사용자 ID**와 **POSIX 그룹 정보**를 강제로 적용할 수 있다.
+
+**사용자 ID 및 루트 디렉터리 강제**
+- 여러 애플리케이션이 공유 데이터를 사용할 때 접근 관리를 쉽게 만들어 준다.
+- 파일 시스템의 루트 디렉터리를 별도로 지정할 수 있어, 클라이언트가 **해당 디렉터리와 그 하위 경로에만 접근하도록 제한**할 수 있다.
+
+**IAM 정책과 Access Point 조합**
+- IAM 정책을 사용하면 **특정 애플리케이션이 반드시 특정 액세스 포인트를 통해서만** EFS에 접근하도록 강제할 수 있다.
+- IAM 정책과 액세스 포인트를 함께 사용하면 애플리케이션별로 특정 데이터셋에 대한 안전한 접근 권한을 손쉽게 제공할 수 있다.
+
+**Access points와 Mount Target의 관계**
+- 액세스 포인트를 사용하려면 먼저 VPC에 최소 하나 이상의 마운트 타깃이 생성되어 있어야 한다.
+- 마운트 타깃은 EFS 파일 시스템에 대한 네트워크 연결을 제공하고, 액세스 포인트는 접근 제어와 애플리케이션 전용 진입 지점을 제공한다.
+- 액세스 포인트는 연결된 마운트 타깃의 가용 영역(AZ) 배치를 그대로 따른다.
+- 보안 그룹은 액세스 포인트가 아니라 마운트 타깃 수준에서 적용된다.
+  - 네트워크 접근 제어는 마운트 타깃 책임
+  - Access Point는 권한/논리적 접근 제어 담당
+- 마운트 타깃이 존재하는 모든 가용 영역에서 액세스 포인트를 사용할 수 있다.
+- 액세스 포인트를 사용해 EFS를 마운트할 때는 **EFS 전용 마운트 헬퍼**를 사용합니다.
+
+**AccessedViaMountTarget**
+- IAM 조건 키 `elasticfilesystem:AccessedViaMountTarget`를 사용하면 직접 마운트든 액세스 포인트를 통한 마운트든 상관없이, 반드시 마운트 타깃을 통해서만 EFS에 접근하도록 강제할 수 있다.
+
 ## 참고 자료
 ---
 - [https://docs.aws.amazon.com/efs/latest/ug/whatisefs.html](https://docs.aws.amazon.com/efs/latest/ug/whatisefs.html)
+- [https://docs.aws.amazon.com/efs/latest/ug/features.html](https://docs.aws.amazon.com/efs/latest/ug/features.html)
+- [https://docs.aws.amazon.com/efs/latest/ug/efs-access-points.html](https://docs.aws.amazon.com/efs/latest/ug/efs-access-points.html)
 - ChatGPT
