--- a/_posts/knowledge /theory/aws/2025-12-31-aws-vpc.md
+++ b/_posts/knowledge /theory/aws/2025-12-31-aws-vpc.md
@@ -13,12 +13,13 @@ tags: [AWS]
 - IP 대역(CIDR), 서브넷 구조, 라우팅 방식 등을 사용자가 직접 설계
 - 즉, AWS 안에 내가 직접 만든 **가상 사설 네트워크**를 하나 갖는 것
 
-![img_4.png](img_4.png)
+![img](/assets/img/aws-vpc-img1.png)
+(출처 : [https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html](https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html))
 
 - 이 VPC는 하나의 리전 안에서, 각 가용 영역(Availability Zone, AZ)마다 하나의 서브넷을 가지고 있다.
 - 각 서브넷 안에는 EC2 인스턴스들이 실행되고 있다. 그리고 VPC 내부 리소스들과 인터넷 간의 통신을 가능하게 하기 위해 Internet Gateway가 연결되어 있다.
 
-## Subnet
+## 서브넷
 ---
 > 서브넷은 VPC 내부에서 사용되는 IP 주소 범위의 논리적 구획
 > VPC가 “네트워크 전체 공간”이라면, 서브넷은 그 안의 실제 리소스 배치 단위
@@ -30,14 +31,14 @@ tags: [AWS]
 - EC2 인스턴스와 같은 **AWS 리소스는 반드시 특정 서브넷에 소속**되어 생성된다.
   - 어느 서브넷에 두느냐가 곧 보안 + 가용성 + 접근성 결정
 
-### Subnet basics (서브넷 기본 개념)
+### 기본 개념
 > 각 서브넷은 **하나의 AZ 안에** 완전히 포함되어야 하며, 여러 AZ에 걸쳐 구성될 수 없다.
 
 - 즉, 서브넷 ↔ AZ는 1:1 종속 관계
 - 이 제약은 물리적 장애 격리를 위한 설계 원칙
   - AWS 리소스를 서로 다른 AZ에 분산 배치하면, 특정 AZ에 장애가 발생하더라도 애플리케이션 전체 장애를 방지할 수 있다.
 
-### Subnet IP address range (서브넷 IP 주소 범위)
+### 서브넷 IP 주소 범위
 > 서브넷을 생성할 때는, VPC의 IP 구성 방식(`IPv4 only`, `Dual stack`, `IPv6 only`)에 따라 서브넷의 IP 주소 체계를 지정해야 한다.
 
 **IPv4 only**
@@ -56,7 +57,7 @@ tags: [AWS]
 - IPv6 전용 서브넷의 리소스에는 `169.254.0.0/16` 범위의 IPv4 링크 로컬 주소가 자동으로 할당된다.
   - 이 주소들은 VPC 내부에서만 제공되는 서비스와의 통신에 사용된다.
 
-### Subnet types (서브넷 유형)
+### 서브넷 유형
 > 서브넷의 유형은 **라우팅 테이블 설정 방식**에 의해 결정된다.
 
 **Public subnet**
@@ -78,6 +79,70 @@ tags: [AWS]
 
 **EVS subnet**
 - Amazon EVS를 사용해 생성되는 특수한 서브넷이다.
+
+### 서브넷 라우팅
+> 각 서브넷은 반드시 하나의 **라우트 테이블**과 연결되어야 하며, 이 라우트 테이블은 해당 서브넷에서 외부로 나가는 트래픽이 어떤 경로로 나갈 수 있는지를 정의한다.
+
+- 퍼블릭, 프라이빗 여부는 서브넷 자체가 아니라 라우트 테이블이 결정
+- 새로 생성되는 모든 서브넷은 기본적으로 VPC의 **메인 라우트 테이블(Main Route Table)**과 자동으로 연결된다.
+  - VPC에는 반드시 Main Route Table이 1개 존재
+- 서브넷과 라우트 테이블의 연결 관계는 변경할 수 있으며, 메인 라우트 테이블 자체의 라우팅 규칙 또한 수정할 수 있다.
+
+**예시 : 퍼블릭 서브넷용 Route Table**
+> 인터넷과 직접 통신 가능한 서브넷
+
+| Destination | Target       |
+| ----------- | ------------ |
+| 10.0.0.0/16 | local        |
+| 0.0.0.0/0   | igw-0a1b2c3d |
+
+- `10.0.0.0/16 → local`
+  - 같은 VPC 내부 통신
+    - 즉, 이 VPC의 CIDR 범위 안에 있는 모든 IP로 가는 트래픽은 VPC 내부(local)에서 처리하라는 의미
+  - 모든 Route Table에 기본으로 존재
+    - AWS VPC는 “VPC 내부 통신은 항상 가능해야 한다”라는 전제를 깔고 설계됨
+    - 그래서 VPC 생성 시, Route Table 생성 시 Subnet 연결 여부와 무관하게 `VPC CIDR → local` 라우트는 자동 생성
+
+- `0.0.0.0/0 → IGW`
+  - VPC 밖(인터넷)으로 나가는 모든 트래픽
+  - Internet Gateway를 통해 직접 인터넷 접근 가능
+
+**예시 : 프라이빗 서브넷용 Route Table**
+> 인터넷 직접 노출 없이, 아웃바운드만 허용
+
+| Destination | Target       |
+| ----------- | ------------ |
+| 10.0.0.0/16 | local        |
+| 0.0.0.0/0   | nat-0f9e8d7c |
+
+- `10.0.0.0/16 → local`
+  - VPC 내부 통신
+
+- `0.0.0.0/0 → NAT`
+  - 외부 인터넷으로 나갈 때 NAT Gateway 경유
+  - 외부에서 직접 들어오는 인바운드는 불가
+
+### 서브넷 설정
+> 모든 서브넷에는 해당 서브넷에서 생성되는 네트워크 인터페이스에 공인 IPv4 주소(및 해당되는 경우 IPv6 주소)를 **자동 할당할지 여부**를 결정하는 설정 값이 존재하며, 수정이 가능하다.
+
+- 이 설정은 인스턴스를 해당 서브넷에 생성할 때 자동으로 만들어지는 기본 네트워크 인터페이스(예: eth0)에도 적용된다.
+- 서브넷의 기본 설정과 무관하게, 인스턴스 생성 시점에 개별 인스턴스 단위로 이 설정을 재정의할 수 있다.
+  - 예 : 퍼블릭 서브넷이지만 특정 EC2만 공인 IP 미부여 가능
+
+### 서브넷 보안
+> AWS 리소스를 보호하기 위해, AWS는 프라이빗 서브넷 사용을 권장한다.
+
+- 프라이빗 서브넷에 있는 EC2 인스턴스와 같은 리소스가 인터넷 접근이 필요할 경우, Bastion Host 또는 NAT 장치를 통해 접근하도록 구성한다.
+  - Bastion Host: 관리 목적 인바운드 접근
+  - NAT Gateway / NAT Instance: 아웃바운드 인터넷 접근
+
+- 보안 그룹(Security Group)은 EC2 인스턴스와 같은 **개별 리소스에 대해** 허용되는 인바운드 및 아웃바운드 트래픽을 제어한다.
+- 네트워크 ACL(Network ACL)은 **서브넷 단위에서** 인바운드 및 아웃바운드 트래픽을 허용하거나 차단한다.
+  - 대부분의 경우 보안 그룹만으로도 요구되는 보안 수준을 충족할 수 있다.
+  - 추가적인 보안 계층이 필요한 경우에는 네트워크 ACL을 함께 사용할 수 있다.
+  - 설계상 모든 서브넷은 반드시 하나의 네트워크 ACL과 연결되어야 한다.
+  - 새로 생성되는 모든 서브넷은 기본적으로 VPC의 기본 네트워크 ACL과 자동 연결된다.
+  - 기본 네트워크 ACL은 모든 인바운드 및 아웃바운드 트래픽을 허용한다.
 
 ## 참고 자료
 ---
