--- a/_posts/knowledge /theory/aws/2025-12-31-aws-vpc.md
+++ b/_posts/knowledge /theory/aws/2025-12-31-aws-vpc.md
@@ -14,6 +14,7 @@ tags: [AWS]
 - 즉, AWS 안에 내가 직접 만든 **가상 사설 네트워크**를 하나 갖는 것
 
 ![img](/assets/img/aws-vpc-img1.png)
+
 (출처 : [https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html](https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html))
 
 - 이 VPC는 하나의 리전 안에서, 각 가용 영역(Availability Zone, AZ)마다 하나의 서브넷을 가지고 있다.
@@ -144,8 +145,115 @@ tags: [AWS]
   - 새로 생성되는 모든 서브넷은 기본적으로 VPC의 기본 네트워크 ACL과 자동 연결된다.
   - 기본 네트워크 ACL은 모든 인바운드 및 아웃바운드 트래픽을 허용한다.
 
+## 보안 그룹 (Security Groups, SG)
+---
+> 자신이 연결된 리소스로 들어오거나(Inbound) 나가는(Outbound) 트래픽 중 **허용된 트래픽만을 제어하는 보안 정책 집합**
+
+- 예를 들어, 보안 그룹을 EC2 인스턴스에 연결하면 해당 보안 그룹이 그 인스턴스의 인바운드 및 아웃바운드 트래픽을 제어하게 된다.
+  - 하나의 EC2에 여러 SG 연결 가능
+  - 여러 EC2가 같은 SG 공유 가능
+
+- VPC를 생성하면, 해당 VPC에는 기본 보안 그룹이 자동으로 함께 생성된다.
+  - 기본 SG 특징:
+    - 인바운드 : 아무것도 허용 안 함 (단, 자기 자신 제외)
+    - 아웃바운드 : 모든 트래픽 허용
+
+- 각 인바운드 규칙에는 트래픽의 출발지, 포트 범위, 프로토콜을 지정할 수 있다.
+- 각 아웃바운드 규칙에는 목적지, 포트 범위, 프로토콜을 지정할 수 있다.
+
+- 다음 다이어그램은 VPC 안에 서브넷, Internet Gateway, 그리고 보안 그룹이 존재하는 구조를 보여준다.
+
+![img](/assets/img/aws-vpc-img2.png)
+
+(출처 : [https://docs.aws.amazon.com/vpc/latest/userguide/vpc-security-groups.html](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-security-groups.html))
+
+- 해당 서브넷에는 EC2 인스턴스가 존재하며, 이 인스턴스에는 특정 보안 그룹이 할당되어 있다.
+- 보안 그룹은 **가상 방화벽**처럼 동작한다.
+  - 즉, EC2 인스턴스에 실제로 도달하는 트래픽은 보안 그룹 규칙에 의해 명시적으로 허용된 트래픽뿐이다.
+  - 예를 들어, 보안 그룹에 사용자 네트워크로부터의 ICMP 트래픽을 허용하는 규칙이 있다면, 사용자는 자신의 컴퓨터에서 해당 인스턴스로 ping을 보낼 수 있다.
+  - 반대로, 보안 그룹에 SSH 트래픽을 허용하는 규칙이 없다면, SSH를 사용해 인스턴스에 접속할 수 없다.
+
+### 규칙
+- 기본적으로 동일한 VPC 내에서 생성된 리소스에 할당할 수 있다.
+- 동일 리전 내 다른 VPC에 대해서는 `Security Group VPC Association` 기능을 사용해 보안 그룹을 다른 VPC와 연결한 뒤 해당 VPC의 리소스에도 할당할 수 있다.
+- 하나의 리소스에는 여러 개의 보안 그룹을 동시에 할당할 수 있다.
+  - 이런 경우, 하나라도 허용하면 통과
+- 보안 그룹 이름은:
+  - 동일 VPC 내에서 유일해야 한다.
+  - 대소문자를 구분하지 않는다.
+  - 최대 255자까지 사용할 수 있다.
+  - 알파벳, 숫자, 공백 및 지정된 특수문자만 사용할 수 있다.
+  - 이름의 끝에 공백이 포함되어 있으면, 해당 공백은 저장 시 자동으로 제거된다.
+  - `sg-`로 시작할 수 없다.
+
+- 다음 트래픽은 보안 그룹 규칙과 무관하게 허용된다:
+  - Amazon DNS 서비스
+  - Amazon DHCP 서비스
+  - EC2 인스턴스 메타데이터
+  - ECS 태스크 메타데이터 엔드포인트
+  - Windows 라이선스 활성화 통신
+  - Amazon Time Sync Service
+  - 기본 VPC 라우터가 사용하는 예약 IP 주소
+
+- 제한 사항:
+  - VPC당 생성 가능한 보안 그룹 수
+  - 보안 그룹당 추가할 수 있는 규칙 수
+  - 하나의 네트워크 인터페이스에 연결할 수 있는 보안 그룹 수
+
+### Stateful
+- 보안 그룹은 상태 저장(Stateful) 방식으로 동작한다.
+  - 예를 들어, 인스턴스에서 외부로 요청을 보낸 경우, 그 요청에 대한 응답 트래픽은 인바운드 규칙과 무관하게 허용된다.
+  - 마찬가지로, 허용된 인바운드 트래픽에 대한 응답은 아웃바운드 규칙과 관계없이 인스턴스에서 나갈 수 있다.
+- 즉, 보안 그룹은 트래픽을 **패킷 단위가 아니라 요청–응답 세션 단위**로 기억하고 판단한다
+
+**Stateless였다면 ?**
+> 예시 : Network ACL <br>
+> Inbound : 22 허용 <br>
+> Outbound : 없음
+
+- 결과 : SSH 접속 안됨 (응답 패킷이 차단됨)
+- 그래서 NACL에서는 항상:
+  - Inbound 22 허용
+  - Outbound 1024-65535 허용
+  - 같은 쌍 규칙을 만들어야 함
+
+### 질문 : sg1을 만들고, sg2의 인바운드를 소스를 sg1으로 지정하면 ?
+
+```
+# sg2
+inbound rule:
+Source = sg1
+Protocol = TCP
+Port = 8080
+```
+
+- 이 규칙의 정확한 의미:
+  - **sg1이 붙어 있는 리소스**에서 오는 트래픽만 sg2가 붙어 있는 리소스로 들어오는 것을 허용한다
+  - 즉, 트래픽을 보낸 리소스의 IP 주소나 네트워크 대역 기준이 아닌 **소속 보안 그룹**으로 판단
+
+```
+[EC2-A] --(sg1) ---> [EC2-B] --(sg2)
+sg2 인바운드 : ALLOW TCP 8080 FROM sg1
+```
+
+| 시도                 | 결과 | 이유              |
+| ------------------ | -- | --------------- |
+| EC2-A → EC2-B:8080 | 허용 | sg1 → sg2 규칙 존재 |
+| EC2-B → EC2-A:8080 | 차단 | sg2 → sg1 규칙 없음 |
+| 다른 EC2 → EC2-B     | 차단 | sg1 소속 아님       |
+
+- 리소스가 어떤 보안 그룹에 '속해있다' ?
+  - 그 리소스의 **ENI(Network Interface)에** 어떤 보안 그룹이 연결되어 있다.
+
+```
+EC2 Instance
+ └─ ENI (eth0)
+     └─ Security Group: sg1
+```
+
 ## 참고 자료
 ---
 - [https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html](https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html)
 - [https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html#subnet-security](https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html#subnet-security)
+- [https://docs.aws.amazon.com/vpc/latest/userguide/vpc-security-groups.html](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-security-groups.html)
 - ChatGPT
